--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
+body { 
+  background: url("../images/wallpaper.png"); 
+  z-index: 0;
+  
+}
+
 .carouselWrap {
-    margin-top: 150px;
+    margin-top: 100px;
     margin-bottom: 100px;
     position: absolute;
     z-index: 0;
@@ -7,8 +13,8 @@
 .carousel-inner{
     height: 500px;
     width: 100%;
-    border-top: rgba(0, 0, 0, 0.616) 5px solid;
-    border-bottom: rgba(0, 0, 0, 0.616) 5px solid;
+    border-top: rgba(0, 0, 0, 0.384) 5px solid;
+    border-bottom: rgba(0, 0, 0, 0.384) 5px solid;
    
 }
 .mainSearch {
@@ -25,3 +31,4 @@ border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.623), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
     text-align: center;
 }
+
