--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
-body { 
-  background: url("../images/wallpaper.png"); 
-  z-index: 0;
-  
+html {
+    position: relative;
+    min-height: 100%;
 }
-
+body { 
+    background: url("../images/wallpaper.png"); 
+    z-index: 0;
+}
 .carouselWrap {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 175px;
+    margin-bottom: 50px;
     position: absolute;
     z-index: 0;
 }
@@ -25,10 +27,42 @@ body {
     
 }
 .input-group{
-z-index: 2;
-border-radius: 10px;
+    z-index: 2;
+    border-radius: 10px;
     width: 250px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.623), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
     text-align: center;
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    background-color: #f5f5f52c;
+    text-align: center;
+}
+header {
+	text-align: center;
+	width: 100%;
+	height: auto;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+    border-radius: 0 0 85% 85% / 30%;
+    margin-bottom: -175px !important;
+}
+header .overlay{
+	width: 100%;
+	height: 100%;
+	padding-bottom: 50px;
+	color: #FFF;
+	text-shadow: 1px 1px 1px #333;
+}
+h1 {
+	font-family: 'Dancing Script', cursive !important;
+	font-size: 150px !important;
+	margin-bottom: -30px !important;
 }
 
