results html outline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,5 +85,28 @@ h1 {
 #addMore:hover .tooltiptext {
     visibility: visible;
 }
+.first {
+    margin-left:45px; 
+}
+.last{
+    padding-right: -70px;
+}
+.wrapper {
+    padding: 50px;
+}
+.inner2 {
+    padding:20px;
+}
+.card-pad {
+    margin: auto;
+    padding: 0 !important;
+}
+.receipe-btn {
+    width: 100%;
+    background-color: rgba(51, 51, 51, 0.301) !important;
+}
+.card-body {
+    padding: 0;
+}
 
 
