--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,15 @@ body {
     background: url("../images/wallpaper.png"); 
     z-index: 0;
 }
+h1 {
+    text-shadow: 0 10px 10px #050505;
+}
 .carouselWrap {
     margin-top: 175px;
     margin-bottom: 50px;
     position: absolute;
     z-index: 0;
+    box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
 }
 .carousel-inner{
     height: 500px;
@@ -98,15 +102,35 @@ h1 {
     padding:20px;
 }
 .card-pad {
-    margin: auto;
+    margin:auto;
     padding: 0 !important;
+    position: relative;
+    border-radius: 20px !important;
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+    
 }
 .receipe-btn {
     width: 100%;
-    background-color: rgba(51, 51, 51, 0.301) !important;
+    background-color: rgba(51, 51, 51, 0.815) !important;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-bottom-right-radius: 20px !important;
+    border-bottom-left-radius: 20px !important;
 }
 .card-body {
     padding: 0;
+}
+.card-img-top {
+    border: 5px solid  rgba(51, 51, 51, 0.815)ck;
+    border-radius: 20px !important;
+}
+.mainCard{
+    margin-top: -10px;
+    margin-bottom: -10px;
+    background-color: rgba(51, 51, 51, 0.514) !important;
+    border: none !important;
+    box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
 }
 
 
