--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,3 +185,12 @@ div.modal-footer {
 #spin {
     display: none;
 }
+.moreResults {
+    position: absolute;
+    box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+    right: 15px;
+    margin-top: -20px !important;
+}
+.secondSearch {
+    margin-top: -30px !important;
+}
