--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,39 @@ div.modal-footer {
 .secondSearch {
     margin-top: -30px !important;
 }
+
+.tooltipfav {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgba(0, 0, 0, 0.582);
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 4;
+    top: 48%;
+    left: 83%;
+    font-size: .3em;
+}
+#addFav{
+    color: red;
+    font-size: 30px;
+    position: absolute;
+    bottom: 75%;
+    left: 90%;
+    text-shadow: 5px 5px 5px black;
+}
+#addFav:hover{
+    cursor: pointer;
+    font-size: 40px;
+}
+
+#addFav:hover .tooltipfav{
+    visibility: visible;
+}
+
+
 .favBtn {
     box-shadow: 0 22px 22px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
     position: absolute !important;
