--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,3 +246,10 @@ div.modal-footer {
     text-shadow: 0 20px 20px #050505;
     padding-left:25%;
 }
+#modal-image{
+    float: left;
+    margin-bottom: 15px;
+}
+#list {
+    float: right;
+}
