--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,6 @@ div.modal-content {
     position: absolute;
     height: auto;
     border: 0.5px solid black;
-    margin-top: 50px;
 }
 div.modal-header {
     border: 0.5px solid black;   
@@ -150,9 +149,10 @@ div.modal-body {
 
 div.modal-footer {
     border: 0.5px solid black;
+    font-family: 'Tinos', serif;
 }
 #map {
-    height: 200px;
+    height: 225px;
     display: none; 
     width: 100%;
     background: white;
