Saving to firebase, and saving to favorites modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,13 @@ body {
     z-index: 0;
 }
 h1 {
-    text-shadow: 0 10px 10px #050505;
+    text-shadow: 0 20px 20px #050505;
 }
 .carouselWrap {
     margin-top: 175px;
     margin-bottom: 50px;
-    position: absolute;
+    padding: 0px !important;
+    position: relative;
     z-index: 0;
     box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
 }
@@ -27,9 +28,10 @@ h1 {
 }
 .mainSearch {
     position: absolute !important;
-    top: 45%;
-    padding-left: 150px !important;
-    padding-right: 150px !important;
+    top: 55%;
+    left: 10%;
+    margin:auto;
+    max-width: 80%;
     
 }
 .input-group{
@@ -57,8 +59,9 @@ header {
 	background-attachment: fixed;
 	position: relative;
 	overflow: hidden;
-    border-radius: 0 0 85% 85% / 30%;
+   /* border-radius: 0 0 85% 85% / 30%;*/
     margin-bottom: -175px !important;
+    background-color: #f19717;
 }
 header .overlay{
 	width: 100%;
@@ -109,7 +112,7 @@ h1 {
     box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
     
 }
-.receipe-btn {
+.recipe-btn, .fav-recipe-btn {
     width: 100%;
     background-color: rgba(51, 51, 51, 0.815) !important;
     position: absolute;
@@ -132,57 +135,148 @@ h1 {
     border: none !important;
     box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
 }
-
 div.modal-content {
-    position: fixed;
+    position: absolute;
     height: auto;
     border: 0.5px solid black;
-    margin-top: 50px;
 }
-
 div.modal-header {
-    border: 0.5px solid black;
-    
+    border: 0.5px solid black;   
 }
-
 div.modal-body {
     border: 0.5px solid black;
-    height: 300px;
-   
+    height: auto;
 } 
 
 div.modal-footer {
     border: 0.5px solid black;
-    
+    font-family: 'Tinos', serif;
 }
-
 #map {
-    height: 300px;
+    height: 225px;
     display: none; 
     width: 100%;
     background: white;
 }
 #miles {
-    width: 13%;
+    width: 15%;
 }
-
-#mapBtn {
-
-}
-
-.searchStores {
-    
-}
-label {
-    margin-right: 144px;
-}
-
 .truncate {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
 #spin {
     display: none;
 }
+.moreResults {
+    position: absolute;
+    box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+    right: 15px;
+    margin-top: -20px !important;
+}
+.secondSearch {
+    margin-top: -30px !important;
+}
+
+.tooltipfav {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgba(0, 0, 0, 0.582);
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 4;
+    top: 48%;
+    left: 83%;
+    font-size: .3em;
+}
+.addFav{
+    color: gold;
+    font-size: 30px;
+    position: absolute;
+    bottom: 75%;
+    left: 86%;
+    text-shadow: 5px 5px 5px black;
+}
+.addFav:hover{
+    cursor: pointer;
+    font-size: 40px;
+}
+
+.addFav:hover .tooltipfav{
+    visibility: visible;
+}
+
+
+.favBtn {
+    box-shadow: 0 22px 22px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+    position: absolute !important;
+    top: 61%;
+    left: 10%;
+    margin:auto;
+    border-radius: 5px;
+}
+@media only screen and (max-width: 600px) {
+    .favBtn {
+        box-shadow: 0 22px 22px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+        position: absolute !important;
+        top: 54%;
+        left: 10%;
+        margin:auto;
+        border-radius: 5px;
+    }
+    .mainSearch {
+        position: absolute !important;
+        top: 48%;
+        left: 10%;
+        margin:auto;
+        max-width: 80%;
+}
+}
+.modal-content{ 
+   background: url("../images/wallpaper.png"); 
+}
+.favoriteText{
+    font-family: 'Dancing Script', cursive !important;
+    color: white;
+    font-size: 4em;
+    text-shadow: 0 20px 20px #050505;
+    padding-left:25%;
+}
+#modal-image{
+    float: left;
+    margin-bottom: 15px;
+}
+#list {
+    float: right;
+}
+
+.modal-text {
+    color: #333;
+
+}
+#title {
+    font-family: 'Abril Fatface', cursive;
+}
+#list, #instructions, #css-likes {
+    font-family: 'Tinos', serif;
+}
+#instructions {
+    clear: left;
+}
+#cook-time,  #diets{
+    font-size: 1.25em;
+    font-family: 'Tinos', serif;
+}
+#auth {
+    position: relative;
+    top: 10%;
+    left: 30%;
+}
+/* .hide {
+    visibility: hidden;
+} */
+
