Added map feature to favs and fixed append bug on favs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,13 +153,13 @@ div.modal-footer {
     border: 0.5px solid black;
     font-family: 'Tinos', serif;
 }
-#map {
+#map, #map1 {
     height: 225px;
     display: none; 
     width: 100%;
     background: white;
 }
-#miles {
+#miles, #miles1 {
     width: 15%;
 }
 .truncate {
@@ -229,16 +229,13 @@ div.modal-footer {
     border-radius: 5px;
 }
 
-<<<<<<< Updated upstream
 .favoritesCard{
     display: inline-flex !important;
 }
 
-=======
 #favsInfo{
    display: none; 
 }
->>>>>>> Stashed changes
 @media only screen and (max-width: 600px) {
     .favBtn {
         box-shadow: 0 22px 22px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
