--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ h5.modal-title.favoriteText{
 #list, #instructions, #css-likes {
     font-family: 'Tinos', serif;
 }
-#instructions {
+#instructionList {
     clear: left;
 }
 #cook-time,  #diets{
