fixing style, and mobile responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,7 +267,7 @@ div.modal-footer {
     .loginBtn1 {
         position: fixed;
         bottom: 10px;
-        right:110px;
+        right: 110px;
     }
     .signupBtn1 {
         position: fixed;
@@ -278,7 +278,6 @@ div.modal-footer {
         position: fixed;
         bottom: 100px;
         right:10px;
-        
     }
     #txtPassword.password1 {
         position: fixed;
@@ -290,11 +289,65 @@ div.modal-footer {
         margin-bottom: -90px !important;
     }
     .homeBtn {
+        position: absolute;
+        box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+        right: 15px;
+        margin-top: -45px !important;
+        margin-bottom: 20px;
+    }
+    .addFav{
+    color:gold;
+    font-size: 30px;
     position: absolute;
-    box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
-    right: 15px;
-    margin-top: -45px !important;
-    margin-bottom: 20px;
+    bottom: 85%;
+    right: -10px !important;
+    text-shadow: 5px 5px 5px black;
+    }
+    .tooltipfav {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgba(0, 0, 0, 0.582);
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 4;
+    top: 25px;
+    left: -100px;
+    font-size: .3em;
+    }
+}
+@media only screen and (max-width: 755px) {
+    .addFav{
+    color:gold;
+    font-size: 30px;
+    position: absolute;
+    bottom: 85%;
+    right: -10px !important;
+    text-shadow: 5px 5px 5px black;
+    }
+}
+@media only screen and (max-width: 990px) {
+    .addFav{
+    color:gold;
+    font-size: 40px;
+    position: absolute;
+    bottom: 85%;
+    right: -10px !important;
+    text-shadow: 5px 5px 5px black;
+    }
+    .addFav:hover{
+    cursor: pointer;
+    font-size: 60px;
+}
+
+}
+@media only screen and (max-width: 1136px) {
+    .logoutBtn1 {
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
     }
 }
 .modal-content{ 
@@ -382,10 +435,10 @@ h5.modal-title.favoriteText{
 }
 .logoutBtn2 {
     margin-top: -25px !important;
-     box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+    box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
 }
 .logoutBtn1 {
-         box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
+    box-shadow: 0 32px 32px 0 rgba(0, 0, 0, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.623);
 }
 .modal-title {
     font-family: 'Dancing Script', cursive !important;
